[package]
name = "webauthn-assert"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI for WebAuthn security key assertions via CTAP2"
license = "MIT"
repository = "https://github.com/unstableneutron/webauthn-assert"

[dependencies]
ctap-hid-fido2 = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
thiserror = "2.0"
